# realgud

./: .gitignore  .travis.yml  AUTHORS  Carton  Cask  ChangeLog  INSTALL  INSTALL.md  Makefile.am  NEWS.md  README  README.md  README.textile  THANKS  autogen.sh  buffer.el  cask-install.el  cmdbuf.el  cmds.el  common.mk  common.mk.in  compute-lispdir.sh  configure.ac  core.el  custom.el  dbgr-arrow.el  dbgr-buffer.el  dbgr-cmdbuf.el  dbgr-cmds.el  dbgr-core.el  dbgr-custom.el  dbgr-file.el  dbgr-fringe.el  dbgr-helper.el  dbgr-init.el  dbgr-key.el  dbgr-load.el  dbgr-loc.el  dbgr-lochist.el  dbgr-procbuf-var.el  (+33 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md
common/: backtrace-mode.el  bp.el  cmds.el  core.el  custom.el  eval.el  file.el  follow.el  fringe-utils.py  helper.el  key.el  menu.el  send.el  shortkey.el  utils.el  window.el
common/buffer/: Makefile.am  backtrace.el  helper.el  info.el  source.el
dbgr/: Makefile.am  bp.el  brkpt.el  buffer.el  cmdbuf.el  cmds.el  common.mk  core.el  custom.el  file.el  key.el  loc.el  lochist.el  menu.el  regexp.el  reset.el  shortkey.el  track-mode.el  track.el
dbgr/common/: Makefile.am  backtrace-mode.el  backtrack-mode.el  bp-image-data.el  bp.el  bt-buf.el  buffer.el  cmdbuf.el  cmds.el  core.el  custom.el  file.el  fringe.el  helper.el  init.el  key.el  lang.el  loc.el  lochist.el  menu.el  regexp.el  reset.el  send.el  shortkey.el  srcbuf.el  tb-buf.el  track-mode.el  track.el  window.el
dbgr/common/buffer/: Makefile.am  backtrace.el  command.el  helper.el  source.el
dbgr/common/init/: Makefile.am  bashdb.el  gdb.el  kshdb.el  perldb.el  pydb.el  pydbgr.el  rbdbgr.el  (+5 more)
dbgr/debugger/: Makefile.am  common.mk
dbgr/gdb/: .gitignore  Makefile.am  core.el  gdb-core.el  gdb-track-mode.el  gdb.el  track-mode.el
dbgr/init/: bashdb.el  gdb.el  kshdb.el  rbdbgr.el  rdebug.el  zshdb.el
dbgr/lang/: .gitignore  Makefile.am  perl.el  posix-shell.el  python.el  ruby.el
dbgr/pydbgr/: Makefile.am  cmds.el  core.el  init.el  pydbgr.el  track-mode.el
dbgr/python/: pydbgr-core.el  pydbgr-track-mode.el  pydbgr.el
dbgr/rbdbgr/: cmds.el  core.el  rbdbgr.el  track-mode.el
dbgr/rdebug/: .gitignore  Makefile  Makefile.am  cmds.el  core.el  init.el  rdebug.el  track-mode.el
dbgr/ruby/: Makefile.am  core.el  rbdbgr-core.el  rbdbgr-track-mode.el  rbdbgr.el
dbgr/trepan/: .gitignore  cmds.el  core.el  init.el  track-mode.el  trepan.el
dbgr/trepanx/: Makefile.am  cmds.el  core.el  init.el  track-mode.el  trepanx.el
dbgr/zshdb/: Makefile.am  cmds.el  core.el  init.el  track-mode.el  zshdb.el
debugger/bashdb/: core.el
debugger/gub/: gub.el
etc/: screenshot.el
init/: Makefile.am  bashdb.el  kshdb.el  pydb.el  pydbgr.el  rbdbgr.el  rdebug.el  remake.el  zshdb.el
lang/: perl.el  ruby.el
python/: Makefile.am  pydbgr-core.el  pydbgr-regexp.el  pydbgr-track-mode.el  pydbgr.el
realgud/: .nosearch  Makefile.am
realgud/common/: Makefile.am  attach.el  backtrace-mode.el  backtrack-mode.el  bp-image-data.el  bp.el  breakpoint-mode.el  cmds.el  core.el  custom.el  eval.el  file.el  follow.el  fringe-utils.py  fringe.el  helper.el  init.el  key.el  lang.el  loc.el  locals-mode.el  lochist.el  menu.el  regexp.el  reset.el  run.el  send.el  shortkey.el  track-mode.el  track.el  utils.el  window.el
realgud/common/buffer/: Makefile.am  backtrace.el  breakpoint.el  command.el  helper.el  info.el  locals.el  source.el
realgud/dap/: dap.el
realgud/debugger/: Makefile.am  common.mk
realgud/debugger/bashdb/: Makefile.am  bashdb.el  core.el  init.el  track-mode.el
realgud/debugger/dap/: dap.el
realgud/debugger/gdb/: core.el  gdb.el  init.el  track-mode.el
realgud/debugger/gub/: core.el  gub.el  init.el  track-mode.el
realgud/debugger/ipdb/: core.el  init.el  ipdb.el  track-mode.el
realgud/debugger/jdb/: Makefile.am  README  backtrack-mode.el  core.el  file.el  init.el  jdb.el  track-mode.el
realgud/debugger/kshdb/: Makefile.am  core.el  init.el  kshdb.el  track-mode.el
realgud/debugger/nodejs/: core.el  init.el  nodejs.el  track-mode.el
realgud/debugger/pdb/: Makefile.am  core.el  init.el  pdb.el  track-mode.el
realgud/debugger/perldb/: core.el  init.el  perldb.el  track-mode.el
realgud/debugger/pydb/: core.el  init.el  pydb.el  track-mode.el
realgud/debugger/pydbgr/: core.el  init.el  pydbgr.el  track-mode.el
realgud/debugger/rdebug/: core.el  init.el  rdebug.el  track-mode.el
realgud/debugger/remake/: core.el  init.el  remake.el  track-mode.el
realgud/debugger/trepan/: backtrack-mode.el  core.el  init.el  track-mode.el  trepan.el
realgud/debugger/trepan.pl/: backtrack-mode.el  core.el  init.el  track-mode.el  trepanpl.el
realgud/debugger/trepan2/: core.el  init.el  track-mode.el  trepan2.el
realgud/debugger/trepan3k/: core.el  init.el  track-mode.el  trepan3k.el
realgud/debugger/trepan8/: core.el  init.el  track-mode.el  trepan8.el
realgud/debugger/trepanjs/: backtrack-mode.el  core.el  init.el  track-mode.el  trepanjs.el
realgud/debugger/trepanx/: core.el  init.el  track-mode.el  trepanx.el
realgud/debugger/undodb-gdb/: Makefile.am  core.el  init.el  track-mode.el  undodb-gdb.el
realgud/debugger/zshdb/: Makefile.am  core.el  init.el  track-mode.el  zshdb.el
realgud/lang/: Makefile.am  java.el  js.el  perl.el  posix-shell.el  python.el  ruby.el
ruby/: .gitignore  Makefile.am  rbdbgr-core.el  rbdbgr-regexp.el  rbdbgr-track-mode.el  rbdbgr.el
test/: .gitignore  HelloWorld.java  Makefile  Makefile.am  behave.el  bt-helper.el  gcd.js  gcd.pl  gcd.py  gcd.rb  gcd.sh  make-check-filter.rb  regexp-helper.el  test-bashdb.el  test-bp.el  test-bt-pdb.el  test-bt-pydb.el  test-bt-pydbgr.el  test-bt-rdebug.el  test-bt-trepan.el  test-bt-trepan2.el  test-bt-trepan3k.el  test-bt-trepanx.el  test-bt-zshdb.el  test-buf-bt.el  test-buf-cmd.el  test-cmdbuf.el  test-common-helper.el  test-core.el  test-dap.el  test-dbgr.el  test-file.el  test-gdb-core.el  test-gdb.el  test-gub-core.el  test-helper.el  test-ipdb.el  test-jdb.el  test-keymap-cleanup.el  test-lang-js.el  (+58 more)
test/gdb/: bar.sh
(+82 files in other folders)
